--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.github.clans:fab:1.6.2'
 }
