--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.clans:fab:1.6.2'
+    compile 'joda-time:joda-time:2.8.2'
 }
