Reminder, periscope and twitter buttons ready.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
                 android:value=".SearchResultsActivity" />
         </activity>
 
+        <service android:name=".MediNotificationService" />
+
         <activity android:name=".SearchResultsActivity"
             android:label="Search Results"
             android:launchMode="singleTop">
