--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.clans:fab:1.6.2'
     compile 'joda-time:joda-time:2.8.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
