--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -38,9 +39,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" >
 
+            <!--
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".SearchResultsActivity" />
+                -->
         </activity>
 
         <service android:name=".MediNotificationService" />
@@ -51,6 +54,7 @@
             </intent-filter>
         </receiver>
 
+        <!--
         <activity android:name=".SearchResultsActivity"
             android:label="Search Results"
             android:launchMode="singleTop">
@@ -62,6 +66,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        -->
     </application>
 
 </manifest>
