--- a/gsheets2a/build.gradle
+++ b/gsheets2a/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'GSheets2A'
+
+    publishedGroupId = 'space.darkowlzz'
+    libraryName = 'GSheets2A'
+    artifact = 'gsheets2a'
+
+    libraryDescription = 'Google Sheets to Android'
+
+    siteUrl = ''
+    gitUrl = ''
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'darkowlzz'
+    developerName = 'Sunny (darkowlzz)'
+    developerEmail = 'me@darkowlzz.space'
+
+    licenseName = ''
+    licenseUrl = ''
+    allLicenses = []
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -22,4 +46,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
