--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_TARGET=android-21  ANDROID_ABI=armeabi-v7a-android-21
+    - ANDROID_TARGET=android-21  ANDROID_ABI=armeabi-v7a
 
 android:
     components:
