--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,14 @@ android:
 
 before_script:
   # Create and start emulator
-  - android list targets
-  - android list sdk --all
-  - android update sdk -u -a -t 103
-  - echo y
+  - sudo apt-get update
+  - sudo apt-get install expect
+  - chmod +x magic.exp
+  - ./magic.exp
+  # - android list targets
+  # - android list sdk --all
+  # - android update sdk -u -a -t 103
+  # - echo y
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - adb wait-for-device
