--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
   - sudo apt-get update
   - sudo apt-get install expect
   - chmod +x magic.exp
+  - chmod +x setup.sh
   - ./magic.exp
   # - android list targets
   # - android list sdk --all
