--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,15 @@ env:
 android:
     components:
         - build-tools-23.0.1
+        - android-23
 
 before_script:
   # Create and start emulator
-  - sudo apt-get update
-  - sudo apt-get install expect
-  - chmod +x magic.exp
-  - chmod +x setup.sh
-  - ./magic.exp
+  #- sudo apt-get update
+  #- sudo apt-get install expect
+  #- chmod +x magic.exp
+  #- chmod +x setup.sh
+  #- ./magic.exp
   # - android list targets
   # - android list sdk --all
   # - android update sdk -u -a -t 103
