--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
         - build-tools-22.0.1
         - android-22
         - sys-img-armeabi-v7a-android-22
-        -
+        - extras
 
 before_script:
   # Create and start emulator
